src/test/resources/arp/invalid/arp_nonlinear_rdw.sil
field f: Int

method foo(x: Ref)
requires acc(x.f, rdw*rdw)
ensures acc(x.f, rdw*rdw)
{
}